cabal-version: 2.4
name:          tmp
version:       0.0.0.0
category:      Networking
license:       BSD-3-Clause
build-type:    Simple

library
  exposed-modules:
    Proto.Helloworld
    Proto.Helloworld_Fields

  hs-source-dirs:   gen-hs
  ghc-options:      -Wall
  build-depends:
    , base
    , proto-lens-runtime

  default-language: Haskell2010

executable example
  main-is:          app/example.hs
  build-depends:
    , base              >=4.10 && <5
    , binary
    , bytestring
    , case-insensitive
    , http-types
    -- , http2             ^>=2.0
    , http2             ^>=3.0
    , microlens
    , proto-lens
    , tmp
    , vector
    , wai
    , warp
    , zlib

  default-language: Haskell2010
  ghc-options:
    -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts
